--- a/Flugapp/login.css
+++ b/Flugapp/login.css
@@ -12,12 +12,12 @@ body{
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    color: #000000;
+    color: #e22921;
 }
 .login-box h1{
     float: left;
     font-size: 40px;
-    border-bottom: 6px solid #000000;
+    border-bottom: 6px solid #e22921;
     margin-bottom: 50px;
     padding: 13px 0;
 }
@@ -27,7 +27,7 @@ body{
     font-size: 20px;
     padding:8px 0;
     margin: 8px 0;
-    border-bottom: 1px solid #000000;
+    border-bottom: 1px solid #e22921;
 }
 .textbox i{
     width: 26px;
@@ -38,7 +38,7 @@ body{
     border: none;
     outline: none;
     background: none;
-    color: #000000;
+    color: #e22921;
     font-size: 18px;
     width: 80%;
     float: left;
@@ -46,8 +46,8 @@ body{
 }
 .btn{
     background: none;
-    border: 2px solid #000000;
-    color: #000000;
+    border: 2px solid #e22921;
+    color: #e22921;
     padding: 5px;
     font-size: 18px;
     cursor: pointer;
@@ -55,8 +55,8 @@ body{
 }
 .btn{
     background: none;
-    border: 2px solid #000000;
-    color: #000000;
+    border: 2px solid #e22921;
+    color: #e22921;
     padding: 5px;
     font-size: 18px;
     cursor: pointer;
